fatoora-derive/tests/fail/unknown_rule.stderr
error: Unknown rule `does_not_exist`
 --> tests/fail/unknown_rule.rs:3:10
  |
3 | #[derive(Validate)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Validate` (in Nightly builds, run with -Z macro-backtrace for more info)
